# ptrace_syscalls

./: Cargo.toml  README.md
host/: Cargo.toml
host/src/: lib.rs  main.rs
victim/: Cargo.toml
victim/src/: main.rs
