[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We will also be pulling in the logging crates used in the victim process for our logging needs as well
log = "0.4.17"
pretty_env_logger = "0.4.0"

thiserror = "1.0.37"

sysinfo = "0.26.6"
nix = { version = "0.25.0", features = ["ptrace"] }
syscalls = "0.6.7"

byteorder = "1.4.3"